# algorithms-and-data-structures-in-c

./: .gitignore  meson.build
src/: meson.build
src/doubly_linked_list/: doubly_linked_list.c  doubly_linked_list.h  meson.build
src/doubly_linked_list/test/: doubly_linked_list_test.c
src/linked_list/: linked_list.c  linked_list.h  meson.build
src/linked_list/test/: linked_list_test.c
